--- a/apps/ethic_share_web/assets/public/index.html
+++ b/apps/ethic_share_web/assets/public/index.html
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/bootstrap.min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.min.css" />
     <script src="%PUBLIC_URL%/js/jquery.min.js" type="text/javascript" language="javascript"></script>
     <script src="%PUBLIC_URL%/js/popper.min.js" type="text/javascript" language="javascript"></script>
     <script src="%PUBLIC_URL%/js/bootstrap.min.js" type="text/javascript" language="javascript"></script>
@@ -35,42 +35,20 @@
       <a class="navbar-brand" href="#">
         <img src="%PUBLIC_URL%/logo192.png" alt="logo" class="menu-logo-image" />
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-trigger="#main_nav">
         <span class="navbar-toggler-icon"></span>
       </button>
-    
-      <div class="collapse navbar-collapse" id="navbarColor01">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Separated link</a>
-            </div>
-          </li>
+      <div class="navbar-collapse" id="main_nav">
+        <div class="offcanvas-header mt-3">  
+          <button class="btn btn-outline-danger btn-close float-right"> &times Close </button>
+          <h5 class="py-2 text-white">Main navbar</h5>
+        </div>
+        <ul class="navbar-nav">
+          <li class="nav-item active"> <a class="nav-link" href="#">Home </a> </li>
+          <li class="nav-item"><a class="nav-link" href="#"> About </a></li>
+          <li class="nav-item"><a class="nav-link" href="#"> Services </a></li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search">
-          <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
+      </div> <!-- navbar-collapse.// -->
     </nav>
 
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -85,5 +63,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="%PUBLIC_URL%/js/menu.js" type="text/javascript" language="javascript"></script>
   </body>
 </html>
