--- a/apps/ethic_share_web/assets/public/index.html
+++ b/apps/ethic_share_web/assets/public/index.html
@@ -32,7 +32,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
         <img src="%PUBLIC_URL%/logo192.png" alt="logo" class="menu-logo-image" />
       </a>
       <button class="navbar-toggler" type="button" data-trigger="#main_nav">
@@ -44,9 +44,7 @@
           <h5 class="py-2 text-white">Main navbar</h5>
         </div>
         <ul class="navbar-nav">
-          <li class="nav-item active"> <a class="nav-link" href="#">Home </a> </li>
-          <li class="nav-item"><a class="nav-link" href="#"> About </a></li>
-          <li class="nav-item"><a class="nav-link" href="#"> Services </a></li>
+          <li class="nav-item active"> <a class="nav-link" href="/login">Login</a> </li>
         </ul>
       </div> <!-- navbar-collapse.// -->
     </nav>
